fixed z-index of scrolltoTop and nav in mobiles

--- a/components/UI/buttons/ScrollToTop.module.css
+++ b/components/UI/buttons/ScrollToTop.module.css
@@ -14,6 +14,7 @@
 	cursor: pointer;
 	font-size: 4rem;
 	overflow: hidden;
+	z-index: 0;
 }
 
 .box::before {
